# keenuz

./: Instruktsiya.txt  README.md  TZ.docx  integratsiyalar.txt
backend/: .gitignore  README.md  manage.py  pyproject.toml
backend/apps/contests/: admin.py  urls.py
backend/apps/contests/constants/: __init__.py  contest_category.py  contest_status.py  contests_rating.py
backend/apps/contests/migrations/: 0001_initial.py
backend/apps/contests/models/: __init__.py  contest.py  contest_problem.py  contestant.py  contestant_problem_info.py  contests_rating.py
backend/apps/contests/serializers/: __init__.py  contest.py
backend/apps/contests/views/: __init__.py  contest.py
backend/apps/home/: admin.py  apps.py  urls.py
backend/apps/home/migrations/: 0001_initial.py
backend/apps/home/models/: __init__.py  group_daily_task.py
backend/apps/home/serializers/: group_daily_task.py
backend/apps/home/views/: __init__.py  group_daily_task.py
backend/apps/problems/: admin.py  signals.py  translation.py  urls.py
backend/apps/problems/constants/: __init__.py  attempt_verdict.py  lang.py  (+1 more)
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/ws/: consumers.py  routing.py
backend/common/: storages.py
backend/common/api/: paginations.py
backend/core/: asgi.py  urls.py  wsgi.py  yasg.py
backend/core/settings/: __init__.py  aws.py  channel_layers.py  ckeditor_configs.py  cors.py  databases.py  installed_apps.py  locale_paths.py  logging.py  middleware.py  q_cluster.py  quill_configs.py  rest_framework.py  templates.py
(+154 files in other folders)
